Konfigurimi i MySQL në projekt - Backend

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Visual Studio
+.vs/
+*.user
+*.suo
+
+# Build output
+bin/
+obj/
+
+# EF Core migration snapshots (optional)
+**/*.csproj.EntityFrameworkCore.Snapshot.cs
