Konfigurimi i MongoDB në projekt - Backend

--- a/backend/MedTrack.API/MedTrack.API/appsettings.json
+++ b/backend/MedTrack.API/MedTrack.API/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=MedTrackDb;User=root;Password='';"
   },
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "MedTrackDB"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
