Setup dhe Konfigurimi i Tokens

--- a/backend/MedTrack.API/MedTrack.API/appsettings.json
+++ b/backend/MedTrack.API/MedTrack.API/appsettings.json
@@ -12,5 +12,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  {
+    "Jwt": {
+      "Key": "VETEM_NJE_SECRET_I_MIRE_DHE_I_GJATE",
+      "Issuer": "MedTrack.API",
+      "Audience": "MedTrack.Client",
+      "AccessTokenExpiryMinutes": 15,
+      "RefreshTokenExpiryDays": 7
+    }
+  }
 }
