Përmirësime të vogla gjatë testimeve

--- a/backend/MedTrack.API/MedTrack.API/appsettings.json
+++ b/backend/MedTrack.API/MedTrack.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MedTrackDb;User=root;Password='';"
+    "DefaultConnection": "Server=localhost;Database=MedTrackDb;User=root;Password="
   },
   "MongoDBSettings": {
     "ConnectionString": "mongodb://localhost:27017",
@@ -13,13 +13,11 @@
     }
   },
   "AllowedHosts": "*",
-  {
-    "Jwt": {
-      "Key": "yJf0G7P3ZtqV8nL5sKxD4uQ9aNhR2eF6wYbU1oVcXeI=",
-      "Issuer": "MedTrack.API",
-      "Audience": "MedTrack.Client",
-      "AccessTokenExpiryMinutes": 15,
-      "RefreshTokenExpiryDays": 7
-    }
+  "Jwt": {
+    "Key": "yJf0G7P3ZtqV8nL5sKxD4uQ9aNhR2eF6wYbU1oVcXeI=",
+    "Issuer": "MedTrack.API",
+    "Audience": "MedTrack.Client",
+    "AccessTokenExpiryMinutes": 15,
+    "RefreshTokenExpiryDays": 7
   }
 }
