--- a/frontend/medtrack-frontend/package.json
+++ b/frontend/medtrack-frontend/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@headlessui/react": "^2.2.4",
+    "@microsoft/signalr": "^8.0.7",
     "@tailwindcss/vite": "^4.1.9",
     "axios": "^1.9.0",
     "react": "^19.1.0",
