--- a/frontend/medtrack-frontend/.env
+++ b/frontend/medtrack-frontend/.env
@@ -1,6 +1,7 @@
 # URL i backend-it .NET (HTTP)
-VITE_API_URL=http://localhost:5130
+#VITE_API_URL=http://localhost:5130/api
+#VITE_API_URL=http://localhost:5130/api
 
 # Nese preferon me perdor HTTPS:
-# VITE_API_URL=https://localhost:7210
+VITE_API_URL=https://localhost:7210
 # VITE_API_URL=https://localhost:7210;http://localhost:5130
