--- a/frontend/medtrack-frontend/package.json
+++ b/frontend/medtrack-frontend/package.json
@@ -18,9 +18,11 @@
     "@microsoft/signalr": "^8.0.7",
     "@tailwindcss/vite": "^4.1.9",
     "axios": "^1.9.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "react-signalr": "^0.2.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
