--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "@fullcalendar/core": "^5.11.3",
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/interaction": "^5.11.3",
+    "@fullcalendar/react": "^5.11.3",
+    "@fullcalendar/timegrid": "^5.11.3",
     "react-signalr": "^0.2.24"
   }
 }
