Switching from MySQL to MSSQL

--- a/backend/MedTrack.API/MedTrack.API/appsettings.json
+++ b/backend/MedTrack.API/MedTrack.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=MedTrackDb;User=root;Password="
+    "DefaultConnection": "Server=DESKTOP-N9UAHJP;Database=MedTrackDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "MongoDBSettings": {
     "ConnectionString": "mongodb://localhost:27017",
