Fixed any issues in the process of making an Appointment + Added Online Payment

--- a/backend/MedTrack.API/MedTrack.API/appsettings.json
+++ b/backend/MedTrack.API/MedTrack.API/appsettings.json
@@ -19,5 +19,8 @@
     "Audience": "MedTrack.Client",
     "AccessTokenExpiryMinutes": 15,
     "RefreshTokenExpiryDays": 7
+  },
+  "Stripe": {
+    "SecretKey": ""
   }
 }
