--- a/backend/MedTrack.API/MedTrack.API/MedTrack.API.csproj
+++ b/backend/MedTrack.API/MedTrack.API/MedTrack.API.csproj
@@ -23,6 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <PackageReference Include="Stripe.net" Version="48.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.0" />
   </ItemGroup>
