--- a/frontend/medtrack-frontend/package.json
+++ b/frontend/medtrack-frontend/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fullcalendar/core": "^5.11.3",
-    "@fullcalendar/daygrid": "^5.11.3",
-    "@fullcalendar/interaction": "^5.11.3",
-    "@fullcalendar/react": "^5.11.3",
-    "@fullcalendar/timegrid": "^5.11.3",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@headlessui/react": "^2.2.4",
     "@microsoft/signalr": "^8.0.7",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/vite": "^4.1.9",
     "axios": "^1.10.0",
     "jwt-decode": "^4.0.0",
